force-app/main/default/objects/Portfolio__c/fields/About_Me_Heading__c.field-meta.xml
<CustomField>
    <fullName>About_Me_Heading__c</fullName>
    <label>About Me Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>