force-app/main/default/objects/Portfolio__c/fields/About_Me_paragraph__c.field-meta.xml
<CustomField>
    <fullName>About_Me_paragraph__c</fullName>
    <label>About Me Paragraph</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>