force-app/main/default/objects/Portfolio__c/fields/Experiences_Heading__c.field-meta.xml
<CustomField>
    <fullName>Experiences_Heading__c</fullName>
    <label>Experiences Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>