force-app/main/default/objects/Portfolio__c/fields/Experiences_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>Experiences_Paragraph__c</fullName>
    <label>Experiences Paragraph</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>