force-app/main/default/objects/Portfolio__c/fields/Introduction_paragraph__c.field-meta.xml
<CustomField>
    <fullName>Introduction_paragraph__c</fullName>
    <label>Introduction paragraph</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>