force-app/main/default/objects/Portfolio__c/fields/Invitation__c.field-meta.xml
<CustomField>
    <fullName>Invitation__c</fullName>
    <label>Invitation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>