force-app/main/default/objects/Portfolio__c/fields/Portfolio_Search__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Search</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Portfolios</relationshipLabel>
    <relationshipName>Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>